--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "node build/build.js && node appserver",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
@@ -29,31 +29,36 @@
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-istanbul": "4.1.5",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
+    "chai": "4.1.2",
     "chalk": "2.3.0",
+    "chromedriver": "2.35.0",
     "connect-history-api-fallback": "1.5.0",
     "copy-webpack-plugin": "4.3.1",
+    "cross-env": "5.1.3",
+    "cross-spawn": "6.0.4",
     "css-loader": "0.28.9",
     "eslint": "4.16.0",
+    "eslint-config-standard": "11.0.0-beta.0",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-html": "4.0.2",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
-    "eslint-config-standard": "11.0.0-beta.0",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
     "eventsource-polyfill": "0.9.6",
-    "express": "4.16.2",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.4",
-    "cross-env": "5.1.3",
+    "inject-loader": "3.0.1",
     "karma": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-mocha": "1.3.0",
@@ -65,24 +70,19 @@
     "karma-webpack": "2.0.9",
     "lolex": "2.3.2",
     "mocha": "5.0.0",
-    "chai": "4.1.2",
-    "sinon": "4.2.2",
-    "sinon-chai": "2.14.0",
-    "inject-loader": "3.0.1",
-    "babel-plugin-istanbul": "4.1.5",
-    "phantomjs-prebuilt": "^2.1.16",
-    "chromedriver": "2.35.0",
-    "cross-spawn": "6.0.4",
     "nightwatch": "0.9.19",
     "node-sass": "4.7.2",
+    "opn": "5.2.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "1.4.0",
+    "phantomjs-prebuilt": "^2.1.16",
+    "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "selenium-server": "3.8.1",
     "semver": "5.5.0",
     "shelljs": "0.8.1",
-    "opn": "5.2.0",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
-    "ora": "1.4.0",
-    "rimraf": "2.6.2",
+    "sinon": "4.2.2",
+    "sinon-chai": "2.14.0",
     "url-loader": "0.6.2",
     "vue-loader": "14.1.1",
     "vue-style-loader": "3.1.2",
