Ignored .git and .editorconfig from being copied to docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,8 @@
 .project
 .settings
 .directory
+.git
+.env
 node_modules/
 dist/
 npm-debug.log*
@@ -12,4 +14,3 @@ yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
-.env
